# AlgDat

./: AlgDat øving 2.docx  CMakeLists.txt  Main.java  Oving2.java  README.md  oving3.c  Øving 1 Algoritmer og datastrukturer Jacob Lein.docx
oving4/: oving4_1.c  oving4_2.c
oving5/: oving5.c
oving7/: oving7.java
